ssl on rotation task

--- a/SSL/SSL.ipynb
+++ b/SSL/SSL.ipynb
@@ -6,7 +6,7 @@
         "id": "KDV47bz2jiyV"
       },
       "source": [
-        "# AML - VOC 2012\n",
+        "AML - VOC 2012\n",
         "\n",
         "Volpato Mattia 866316"
       ]
@@ -349,7 +349,7 @@
         "id": "lrPog6jdjsWj"
       },
       "source": [
-        "## Preprocessing"
+        "## Loading and preprocessing"
       ]
     },
     {
@@ -821,7 +821,7 @@
         "id": "W2C9IWimNQqQ"
       },
       "source": [
-        "### training the model"
+        "## training the model on rotation classification task"
       ]
     },
     {
@@ -1602,7 +1602,7 @@
         "id": "y69WcpZlIfe8"
       },
       "source": [
-        "# Loading raw photoes"
+        "# Loading raw photos and finetuning"
       ]
     },
     {
@@ -2161,7 +2161,7 @@
         "id": "K6P6HRDtCASV"
       },
       "source": [
-        "# supervised finetuning"
+        "## supervised finetuning"
       ]
     },
     {
@@ -2761,6 +2761,13 @@
         "    axis.set_title(f'{labels[i]}\\nDimensions: {image_size[0]}x{image_size[1]}x{image_size[2]}')\n",
         "\n",
         "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## predict on testset"
       ]
     },
     {
