--- a/SSL/SSL.ipynb
+++ b/SSL/SSL.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "qoDvuOpRwBez"
       },
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "P_f97uwli-17"
       },
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "-_XYXs9pjO4B"
       },
@@ -112,13 +112,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Z06d5GHjjx3Y",
-        "outputId": "ad5d43dd-04c3-480c-f866-aae4b5617748"
+        "id": "Z06d5GHjjx3Y"
       },
       "outputs": [],
       "source": [
@@ -128,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -160,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -192,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "JyGJ2w5rjS2V"
       },
@@ -250,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -302,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "Fi3oSvuDEZwP"
       },
@@ -323,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "v28SWbg83asa"
       },
@@ -585,10 +581,24 @@
         "    axis.imshow(images[i])\n",
         "    axis.axis('off')\n",
         "    image_size = images[i].shape\n",
-        "    axis.set_title(f'{labels[i]}\\nDimensions: {image_size[0]}x{image_size[1]}x{image_size[2]}')\n",
+        "    axis.set_title(f'Label: {labels[i]}\\nDimensions: {image_size[0]}x{image_size[1]}x{image_size[2]}')\n",
         "\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Generate a random permutation of indices to shuffle once the data\n",
+        "shuffled_indices = np.random.permutation(len(train_labels))\n",
+        "train_labels = train_labels[shuffled_indices]\n",
+        "train_images = train_images[shuffled_indices]"
+      ],
+      "metadata": {
+        "id": "Mbuy4ezlmV60"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -826,7 +836,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1137,7 +1147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1164,7 +1174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "pFcc-_8kLwB_"
       },
@@ -1616,7 +1626,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1643,7 +1653,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1670,7 +1680,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1702,7 +1712,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1729,7 +1739,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1761,7 +1771,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1788,7 +1798,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1811,7 +1821,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1841,7 +1851,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1864,7 +1874,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1914,7 +1924,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1941,7 +1951,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1968,7 +1978,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2000,7 +2010,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2027,7 +2037,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2059,7 +2069,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2086,7 +2096,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2116,7 +2126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2166,13 +2176,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2FIIQ2UFJqio",
-        "outputId": "20f0195e-dffc-4aa0-ccc6-ae862be3be22"
+        "id": "2FIIQ2UFJqio"
       },
       "outputs": [],
       "source": [
@@ -2181,7 +2187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2214,7 +2220,7 @@
         "model.layers[-3].trainable=True\n",
         "model.layers[-4].trainable=True\n",
         "\n",
-        "#model.layers[-1] = layers.Dense(20, activation='sigmoid') \n",
+        "#model.layers[-1] = layers.Dense(20, activation='sigmoid')\n",
         "\n",
         "\n",
         "# Mean Average Precision (mAP) usando AUC con curva Precision-Recall\n",
@@ -2249,7 +2255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2275,7 +2281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2528,8 +2534,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "LPxC__vZ1ANN",
+        "outputId": "e82be468-f458-41c4-e887-f66e5f7be952"
+      },
       "outputs": [
         {
           "data": {
@@ -2548,7 +2557,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "id": "hB090WIsJiaP"
       },
@@ -2568,15 +2577,20 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "uHFHcslh1ANO"
+      },
       "source": [
         "### loading Test set"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "ACTde3l11ANO",
+        "outputId": "6de7cff9-793e-479e-f885-9e8bb5e382e3"
+      },
       "outputs": [
         {
           "data": {
@@ -2596,8 +2610,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "irEnfq9p1ANO",
+        "outputId": "103a31df-3f8d-4fe6-a6ea-462991879d30"
+      },
       "outputs": [
         {
           "data": {
@@ -2617,8 +2634,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "J_cTUdxN1ANP",
+        "outputId": "d7d9124d-0c04-44aa-caef-f8297e431f38"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -2634,15 +2654,20 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "KkdttGP91ANP"
+      },
       "source": [
         "Image preprocessing:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "dzlq3rn91ANP",
+        "outputId": "5108fe88-7ee6-4eb5-83b7-e622c4c6b9ce"
+      },
       "outputs": [
         {
           "data": {
@@ -2662,8 +2687,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "HV0iQEl01ANP",
+        "outputId": "7fb87f6a-c916-47d2-ec44-8412669a102f"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -2679,15 +2707,20 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "l4ZK_6Cj1ANP"
+      },
       "source": [
         "Labels encoding:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "Kqf3pucn1ANP",
+        "outputId": "e81109a3-e3d9-42fe-b090-034bd48e8f05"
+      },
       "outputs": [
         {
           "data": {
@@ -2707,8 +2740,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "DTb_CE6R1ANQ",
+        "outputId": "281c6368-7e51-4611-d5d8-2d1140cfe48a"
+      },
       "outputs": [
         {
           "data": {
@@ -2731,8 +2767,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "cZ0o2Ak71ANQ",
+        "outputId": "644defce-5d3d-41a5-af32-6b54e6649602"
+      },
       "outputs": [
         {
           "data": {
@@ -2765,16 +2804,19 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "RcJhaXGU1ANQ"
+      },
       "source": [
         "## predict on testset"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
-        "id": "Mn5xnrSb4R91"
+        "id": "Mn5xnrSb4R91",
+        "outputId": "b0d65852-35fa-4813-9ee7-da6589c0b533"
       },
       "outputs": [
         {
@@ -2791,9 +2833,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {
-        "id": "AxTmn3YK4R91"
+        "id": "AxTmn3YK4R91",
+        "outputId": "1b5f55a6-f245-4dbb-8397-c9791f62aa0d"
       },
       "outputs": [
         {
@@ -2816,9 +2859,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
-        "id": "94nGOTe44R92"
+        "id": "94nGOTe44R92",
+        "outputId": "ef92558f-fb58-4dc7-f03c-edc1de2e1a8c"
       },
       "outputs": [
         {
@@ -2841,9 +2885,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
-        "id": "Cp55mnyb4R92"
+        "id": "Cp55mnyb4R92",
+        "outputId": "0773de27-4021-451a-a820-bbd4dca4aefe"
       },
       "outputs": [
         {
@@ -2869,9 +2914,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "metadata": {
-        "id": "IGKzZU6-4R92"
+        "id": "IGKzZU6-4R92",
+        "outputId": "cd0b0337-4eb8-4bfd-e6ea-a9f8753e478f"
       },
       "outputs": [
         {
@@ -2897,13 +2943,13 @@
     }
   ],
   "metadata": {
-    "accelerator": "TPU",
+    "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [
         "l4uQZWtKHSkB",
         "5udefcDt4R90"
       ],
-      "gpuType": "V28",
+      "gpuType": "T4",
       "provenance": []
     },
     "kernelspec": {
