--- a/pretrained/pretrained.ipynb
+++ b/pretrained/pretrained.ipynb
@@ -1,6 +1,23 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Classificazione multi-label su VOC2012\n",
+        "\n",
+        "## Authors\n",
+        "\n",
+        "- Alessandro Gilardi - 866035 - a.gilardi7@campus.unimib.it\n",
+        "- Alessandro Preziosa - 866142 - a.preziosa1@campus.unimib.it\n",
+        "- Mattia Volpato - 866316 - m.volpato4@campus.unimib.it\n",
+        "\n",
+        "## Transfer Learning"
+      ],
+      "metadata": {
+        "id": "0gsyR98p2yqJ"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -65,7 +82,8 @@
       "metadata": {
         "id": "RHNKwSeH3RLq",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "f5eaa943-b37c-498c-f9ff-cccd6ba9232a"
       },
@@ -493,7 +511,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 8568
         },
         "id": "PhOEFcLOCji5",
         "outputId": "3daec9f3-b190-487d-c348-4c37d7343565"
@@ -1749,7 +1767,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "Cjgkkjz7CJ4V",
         "outputId": "ec30e279-6271-440e-d3f9-24f3d501b385"
@@ -2033,7 +2052,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "d2c1a494-9d3b-4ea9-e2a7-14bc42b88692",
         "id": "Zvu8Oc6pQNON"
@@ -2525,7 +2545,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "3aeafd4c-6566-4cb9-e1a4-77a7e7572687",
         "id": "ZGya0CR9kau6"
@@ -2825,7 +2846,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "78626059-6ffd-4b35-e5f4-8ebc95b8eaf3",
         "id": "czwHupBLkau7"
@@ -3008,7 +3030,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 3112
         },
         "id": "TjYVlU8OFDU7",
         "outputId": "dd306f20-1940-4354-b777-10031d0e5cb5"
@@ -3597,7 +3619,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "gUtLWN0zbqI4",
         "outputId": "203e77ae-9495-4a39-fdd7-e293a92eae6a"
